remove EXTRA_ARGS dead code, due to jvm.options now handling this logic